--- a/image-gallery.html
+++ b/image-gallery.html
@@ -6,10 +6,14 @@
     <link rel="stylesheet" href="image-gallery-style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+<link
+rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
 </head>
 <body>
 <header>
-    <h1>Get Inspired!</h1>
+    <h1 class="animate_animated animate__bounceInLeft">Get Inspired!</h1>
 </header>
 <div class="row">
 
@@ -27,7 +31,7 @@
 
         <!-- 1.2-->
         <div class="container">
-            <img src="./vinyl.jpg" alt="Cactus" class="image">
+            <img src="./vinyl.jpg" alt="A record player" class="image">
             <div class="overlay">
               <div class="text">“Speak less than you know; have more than you show.” <br><br>
                 – William Shakespeare</div>
@@ -37,7 +41,7 @@
 
         <!-- 1.3-->
         <div class="container">
-            <img src="./yoga.jpg" alt="Cactus" class="image">
+            <img src="./yoga.jpg" alt="Woman doing yoga" class="image">
             <div class="overlay">
               <div class="text">“Do not let what you cannot do interfere with what you can do.” <br><br>
                 – John Wooden</div>
@@ -47,7 +51,7 @@
 
         <!-- 1.4-->
         <div class="container">
-            <img src="./solidarity.jpg" alt="Cactus" class="image">
+            <img src="./solidarity.jpg" alt="Hands together in solidarity painted with heart" class="image">
             <div class="overlay">
               <div class="text">“Our lives begin to end the day we become silent about things that matter.” <br><br>
                 – Martin Luther King Jr.</div>
@@ -57,7 +61,7 @@
 
         <!-- 1.5-->
         <div class="container">
-            <img src="./skateboard.jpg" alt="Cactus" class="image">
+            <img src="./skateboard.jpg" alt="Boy skateboarding" class="image">
             <div class="overlay">
               <div class="text">“We become what we think about.”<br><br>
                 – Earl Nightingale</div>
@@ -67,7 +71,7 @@
 
          <!-- 1.6-->
          <div class="container">
-            <img src="./strawberries.jpg" alt="Cactus" class="image">
+            <img src="./strawberries.jpg" alt="Strawberries" class="image">
             <div class="overlay">
               <div class="text">“All seasons have something to offer.”<br><br>
                 – Jeanette Walls</div>
@@ -77,7 +81,7 @@
 
         <!-- 1.7-->
         <div class="container">
-            <img src="./arcade.jpg" alt="Cactus" class="image">
+            <img src="./arcade.jpg" alt="Closeup of arcade stick and buttons" class="image">
             <div class="overlay">
               <div class="text">“We destroy ourselves when we stop feeling. If you bury your feelings within you, you become a graveyard.”<br><br>
                 – Bernie S. Siegel</div>
@@ -90,7 +94,7 @@
 
         <!-- 2.1 -->
         <div class="container">
-            <img src="./meditation.jpg" alt="Meditation" class="image">
+            <img src="./meditation.jpg" alt="Person meditating in nature" class="image">
             <div class="overlay">
               <div class="text">“When I let go of what I am, I become what I might be.”<br><br>
                 – Lao Tzu</div>
@@ -99,8 +103,8 @@
         <!-- single image and quote END -->
 
          <!-- 2.2 -->
-         <div class="container">
-            <img src="./friends.jpg" alt="Meditation" class="image">
+         <div class="container special animate__animated animate__pulse">
+            <img src="./friends.jpg" alt="Friends drinking and laughing" class="image">
             <div class="overlay">
               <div class="text">“If you want to lift yourself up, lift up someone else.”<br><br>
                 – Booker T. Washington</div>
@@ -110,7 +114,7 @@
 
         <!-- 2.3 -->
         <div class="container">
-            <img src="./espresso.jpg" alt="Meditation" class="image">
+            <img src="./espresso.jpg" alt="Cup of espresso" class="image">
             <div class="overlay">
               <div class="text">“I have been impressed with the urgency of doing. Knowing is not enough; we must apply. Being willing is not enough; we must do.”<br><br>
                 – Leonardo da Vinci</div>
@@ -120,7 +124,7 @@
 
         <!-- 2.4 -->
         <div class="container">
-            <img src="./spices.jpg" alt="Meditation" class="image">
+            <img src="./spices.jpg" alt="Spices for cooking" class="image">
             <div class="overlay">
               <div class="text">“Every season has a reason. Summer cannot do the works of winter, nor winter the works of summer. Each season is unique yet so important, so cherish the seasons in your life.”<br><br>
                 – Gift Gugu Mona</div>
@@ -130,7 +134,7 @@
 
         <!-- 2.5 -->
         <div class="container">
-            <img src="./cafe.jpg" alt="Meditation" class="image">
+            <img src="./cafe.jpg" alt="Busy cafe" class="image">
             <div class="overlay">
               <div class="text">“Education costs money. But then so does ignorance.”<br><br>
                 – Sir Claus Moser</div>
@@ -140,7 +144,7 @@
 
         <!-- 2.6 -->
         <div class="container">
-            <img src="./door.jpg" alt="Meditation" class="image">
+            <img src="./door.jpg" alt="Stylistic rustic door" class="image">
             <div class="overlay">
               <div class="text">“When one door of happiness closes, another opens, but often we look so long at the closed door that we do not see the one that has been opened for us.”<br><br>
                 – Helen Keller</div>
@@ -165,7 +169,7 @@
 
         <!-- 3.2-->
         <div class="container">
-            <img src="./running.jpg" alt="Rome city street" class="image">
+            <img src="./running.jpg" alt="Woman running" class="image">
             <div class="overlay">
               <div class="text">“Start where you are. Use what you have. Do what you can.” <br><br>
                 – Arthur Ashe</div>
@@ -175,7 +179,7 @@
 
          <!-- 3.3-->
          <div class="container">
-            <img src="./library.jpg" alt="Rome city street" class="image">
+            <img src="./library.jpg" alt="A library" class="image">
             <div class="overlay">
               <div class="text">“No road is long with good company.”<br><br>
                 – Turkish Proverb</div>
@@ -185,7 +189,7 @@
 
          <!-- 3.4-->
          <div class="container">
-            <img src="./smiles.jpg" alt="Rome city street" class="image">
+            <img src="./smiles.jpg" alt="Friends simling and laughing" class="image">
             <div class="overlay">
               <div class="text">“Limitations live only in our minds. But if we use our imaginations, our possibilities become limitless.”<br><br>
                 – Jamie Paolinetti</div>
@@ -195,7 +199,7 @@
 
         <!-- 3.5-->
         <div class="container">
-            <img src="./car.jpg" alt="Rome city street" class="image">
+            <img src="./car.jpg" alt="Classic Lebanese car" class="image">
             <div class="overlay">
               <div class="text">“There are far, far better things ahead than any we leave behind.”<br><br>
                 – C.S. Lewis</div>
@@ -205,7 +209,7 @@
 
         <!-- 3.6 -->
         <div class="container">
-            <img src="./beach.jpg" alt="Meditation" class="image">
+            <img src="./beach.jpg" alt="Friends playing on the beach" class="image">
             <div class="overlay">
               <div class="text">“Why should you continue going after your dreams? Because seeing the look on the faces of the people who said you couldn’t… will be priceless.”<br><br>
                 – Kevin Ngo</div>
@@ -215,7 +219,7 @@
 
         <!-- 3.7 -->
         <div class="container">
-            <img src="./bike.jpg" alt="Meditation" class="image">
+            <img src="./bike.jpg" alt="Man walking bike on busy city street" class="image">
             <div class="overlay">
               <div class="text">“Life is not about finding yourself. Life is about creating yourself.”<br><br>
                 – Lolly Daskal</div>
@@ -238,7 +242,7 @@
 
         <!-- 4.2 -->
         <div class="container">
-            <img src="./guitar.jpg" alt="Mountain sunset" class="image">
+            <img src="./guitar.jpg" alt="Person playing guitar" class="image">
             <div class="overlay">
               <div class="text">“Life is not about finding yourself. Life is about creating yourself.” <br><br>
                 – Lolly Daskal</div>
@@ -248,7 +252,7 @@
 
         <!-- 4.3 -->
         <div class="container">
-            <img src="./zenRocks.jpg" alt="Mountain sunset" class="image">
+            <img src="./zenRocks.jpg" alt="Decorative rocks in a tall pile" class="image">
             <div class="overlay">
               <div class="text">“Live with intention. Walk to the edge. Listen hard. Practice wellness. Play with abandon. Laugh. Choose with no regret. Do what you love. Live as if this is all there is.” <br><br>
                 – Mary Anne Roadacher-Hershey</div>
@@ -258,7 +262,7 @@
 
          <!-- 4.4 -->
          <div class="container">
-            <img src="./lightbulb.jpg" alt="Mountain sunset" class="image">
+            <img src="./lightbulb.jpg" alt="A lightbulb" class="image">
             <div class="overlay">
               <div class="text">“Perfection is not attainable, but if we chase perfection we can catch excellence.” <br><br>
                 – Vince Lombardi</div>
@@ -268,7 +272,7 @@
 
         <!-- 4.5 -->
          <div class="container">
-            <img src="./books.jpg" alt="Mountain sunset" class="image">
+            <img src="./books.jpg" alt="Books" class="image">
             <div class="overlay">
               <div class="text">“Whatever the mind of man can conceive and believe, it can achieve.” <br><br>
                 – Napoleon Hill</div>
@@ -278,7 +282,7 @@
 
         <!-- 4.6 -->
         <div class="container">
-            <img src="./love.jpg" alt="Mountain sunset" class="image">
+            <img src="./love.jpg" alt="Couple in a field" class="image">
             <div class="overlay">
               <div class="text">“The relationship between husband and wife should be one of closest friends.” <br><br>
                 – B. R. Ambedkar</div>
