made images smaller so load faster

--- a/image-gallery.html
+++ b/image-gallery.html
@@ -88,6 +88,16 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
             </div>
         </div>
         <!-- single image and quote END -->
+
+         <!-- 1.8-->
+         <div class="container">
+          <img src="./car.jpg" alt="Closeup of arcade stick and buttons" class="image">
+          <div class="overlay">
+            <div class="text">“Speak less than you know; have more than you show.” <br><br>
+              – William Shakespeare</div>
+          </div>
+      </div>
+      <!-- single image and quote END -->
         
     </div>
     <div class="column"> 
@@ -148,6 +158,15 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
             <div class="overlay">
               <div class="text">“When one door of happiness closes, another opens, but often we look so long at the closed door that we do not see the one that has been opened for us.”<br><br>
                 – Helen Keller</div>
+            </div>
+        </div>
+        <!-- single image and quote END -->
+           <!-- 2.7 -->
+           <div class="container">
+            <img src="./sunset.jpg" alt="Stylistic rustic door" class="image">
+            <div class="overlay">
+              <div class="text">“Education costs money. But then so does ignorance.”<br><br>
+                – Sir Claus Moser</div>
             </div>
         </div>
         <!-- single image and quote END -->
@@ -229,7 +248,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         <!-- single image and quote END -->
          <!-- 4.1 -->
         <div class="container">
-            <img src="./sunset.jpg" alt="Mountain sunset" class="image">
+            <img src="./sea.jpg" alt="Mountain sunset" class="image">
             <div class="overlay">
               <div class="text">“Every now and then it’s good to stop climbing and appreciate the view from right where you are.” <br><br>
                 – Lori Deschene</div>
